update flavor with different screen

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "[DEV] Flavor dotEnv",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main.dart",
+            "program": "lib/main_dev.dart",
             "args": [
                 "--flavor",
                 "dev"
@@ -15,7 +15,7 @@
             "name": "[STG] Flavor dotEnv",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main.dart",
+            "program": "lib/main_stg.dart",
             "args": [
                 "--flavor",
                 "stg"
